Refactored deprecation warnings into inspections